test/modules/deitz/test_module_use4.good
test_module_use4.chpl:12: error: 'use' of non-module/enum symbol M1
